--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,15 +16,20 @@
     <nav class="navbar navbar-light" style="background-color:dodgerblue;">
       <div class="container">
         <a class="navbar-brand" href="{% url 'index'%}" style="color:White">
-          <!--{%load static %}
-          <img src="staticfiles/nice.png">-->Nice Mobiles
+          {% comment %} {%load static %} {% endcomment %}
+          {% comment %} <img src="{% static 'nice logo.jpg' %}"> {% endcomment %}
+          <b>Nice Private Limited</b>
         </a> 
-        
+        <div>
+        <a class="btn btn-primary" style="border-radius:0" href="{% url 'create_job'%}">Create Job</a>
+        <a class="btn btn-warning" style="border-radius:0" href="{% url 'showjobs'%}">View Jobs</a>
+        </div>   
         <a href="{% url 'index'%}">Home</a>
           <ul class="navbar-nav mr-auto">
+            
             <li class="nav-item active">
                 {% if user.is_authenticated %}
-                  <a class="nav-link" href="{%url 'logout' %}">Logout</a>
+                {{user.username}}<a class="nav-link" href="{%url 'logout' %}">Logout</a>
                 {% else %}
                   <a class="nav-link" href="{%url 'login' %}">Login</a>
                 {% endif %}
