--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,15 @@
 {% block title %}Home{% endblock title %}
 {% block body %}
 <div class="row">
-    <div class="col-3">
-        <div class="card text-white bg-light mb-3" style="max-width: 18rem;border-radius:0; height: 10rem;">
+    <div class="col-md-3 col-sm-6">
+        <div class="card text-white bg-light mb-3" style="max-width: 15rem;border-radius:0; height: 10rem;">
         <div class="card-body">
             <h5 class="card-title"><a class="btn btn-primary" style="border-radius:0" href="{% url 'create_job'%}">Create Job</a></h5>
         </div>
         </div>
     </div>
-    <div class="col-3">
-        <div class="card text-white bg-light mb-3" style="max-width: 18rem;border-radius:0; height: 10rem;">
+    <div class="col-md-3 col-sm-6">
+        <div class="card text-white bg-light mb-3" style="max-width: 15rem;border-radius:0; height: 10rem;">
         <div class="card-body">
             <h5 class="card-title"><a class="btn btn-primary" style="border-radius:0" href="{% url 'showjobs'%}">View Jobs</a></h5>
         </div>
