--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -2,103 +2,114 @@
 {% block Title %}Jobs{% endblock Title %}
 {% block body %}
 {% load crispy_forms_tags %}
-<div class="container">
   <div class="row">
-    <div class="col-3">
-      <div class="card text-white bg-primary mb-3" style="max-width: 18rem;border-radius:0">
-        <div class="card-body">
-          <h5 class="card-title">Registered</h5>
-          <h5 class="card-text">{{registered_jobs_count}}</h5>
+
+    <div class="col-md-2 col-sm-12">
+        
+        <div class="col-md-12">
+          <div class="card text-white bg-primary mb-3" style="max-width: 18rem; height: 8rem; border-radius:0">
+            <div class="card-body">
+              <h5 class="card-title">Registered</h5>
+              <h5 class="card-text">{{registered_jobs_count}}</h5>
+            </div>
+          </div>
         </div>
-      </div>
+        <div class="col-md-12">
+            <div class="card text-white bg-warning mb-3" style="max-width: 18rem; height: 8rem;border-radius:0">
+            <div class="card-body">
+              <h5 class="card-title">In Progress</h5>
+              <h5 class="card-text">{{inprogress_jobs_count}}</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="card text-white bg-success mb-3" style="max-width: 18rem; height: 8rem;border-radius:0">
+            <div class="card-body">
+              <h5 class="card-title">Closed</h5>
+              <h5 class="card-text">{{closed_jobs_count}}</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="card text-white bg-info mb-3" style="max-width: 18rem;height:8rem;border-radius:0">
+            <div class="card-body">
+              <h5 class="card-title">Delivered</h5>
+              <h5 class="card-text">{{delivered_jobs_count}}</h5>
+            </div>
+          </div>
+        </div>
     </div>
-    <div class="col-3">
-        <div class="card text-white bg-warning mb-3" style="max-width: 18rem;border-radius:0">
-        <div class="card-body">
-          <h5 class="card-title">In Progress</h5>
-          <h5 class="card-text">{{inprogress_jobs_count}}</h5>
-        </div>
+    <div class="col-md-10 col-sm-12">
+              
+     
+       <div class="row"> 
+            <div class="filters">
+                  <form method="get">
+                    {{filtered_jobs.form}}
+                    <input class="btn btn-sm btn-primary" type="submit" value="Search">
+                  </form>
+                  <hr>
+            </div>
+        <div>
+        <div class="row">
+      <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th scope="col">JobID</th>
+                      
+                      <th scope="col">Job Title</th>
+                      
+                      <th scope="col">Job Status</th>
+                      <th scope="col">Customer Name</th>
+                      <th scope="col">Customer Mobile Number</th>
+                      <th scope="col">Last Updated</th>
+                      <th scope="col">Invoice</th>
+                      <th scope="col">Action</th>
+
+
+                    </tr>
+                  </thead>
+                  <tbody>
+                              {% for j in page_obj%}
+                            <tr>
+                              <th scope="row">{{j.id}}</th>
+                              
+                              <td><a href="{%url 'view_job' j.id%}"> {{j.jobTitle}} </a> </td>
+                              
+                              <td>{{j.jobStatus}}</td>                        
+                              <td>{{j.customerName}}</td>
+                              <td>{{j.customerMobileNumber}}</td>
+                              <td>{{j.UpdatedTime}}</td>
+                              <td><a class="btn btn-danger" href="{%url 'printreceipt' j.id%}"> Print </a></p></td>
+                              <td><a class="btn btn-primary" href="{%url 'update_job' j.id%}">Edit</a></td>
+                            </tr>
+                            {% endfor %}
+                    </tbody>
+        </table>
       </div>
-    </div>
-    <div class="col-3">
-      <div class="card text-white bg-success mb-3" style="max-width: 18rem;border-radius:0">
-        <div class="card-body">
-          <h5 class="card-title">Closed</h5>
-          <h5 class="card-text">{{closed_jobs_count}}</h5>
-        </div>
-      </div>
-    </div>
-    <div class="col-3">
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem;border-radius:0">
-        <div class="card-body">
-          <h5 class="card-title">Delivered</h5>
-          <h5 class="card-text">{{delivered_jobs_count}}</h5>
-        </div>
+      <div class="row">
+          <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a class="btn btn-primary" href="?page=1">&laquo; first</a>
+                    <a class="btn btn-primary" href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+        
+                <span class="current">
+                    <button class="btn btn-dark"> Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</button>
+                </span>
+        
+                {% if page_obj.has_next %}
+                    <a class="btn btn-primary" href="?page={{ page_obj.next_page_number }}">next</a>
+                    <a class="btn btn-primary" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+          </div>
       </div>
     </div>
   </div>
+</div>
 
 
-<div class="mt-10">
-  
-  <div class="filters" style="padding:2px">
-    <hr>
-    <form method="get">
-      {{filtered_jobs.form}}
-      <input class="btn btn-sm btn-primary" type="submit" value="Search">
-    </form>
-    <hr>
-  </div>
-<table class="table table-striped">
-    <thead>
-      <tr>
-        <th scope="col">JobID</th>
-        
-        <th scope="col">Job Title</th>
-        
-        <th scope="col">Job Status</th>
-        <th scope="col">CustomerName</th>
-        <th scope="col">CustomerMobileNumber</th>
-        <th scope="col">Invoice</th>
-        <th scope="col">Action</th>
-
-
-      </tr>
-    </thead>
-    <tbody>
-        {% for j in page_obj%}
-      <tr>
-        <th scope="row">{{j.id}}</th>
-        
-        <td><a href="{%url 'view_job' j.id%}"> {{j.jobTitle}} </a> </td>
-        
-        <td>{{j.jobStatus}}</td>
-        <td>{{j.customerName}}</td>
-        <td>{{j.customerMobileNumber}}</td>
-        <td><a class="btn btn-danger" href="{%url 'printreceipt' j.id%}"> Print </a></p></td>
-        <td><a class="btn btn-primary" href="{%url 'update_job' j.id%}">Edit</a></td>
-      </tr>
-      {% endfor %}
-      </tbody>
-      </table>
-    </div>
-    </div>
-    <div class="pagination">
-      <span class="step-links">
-          {% if page_obj.has_previous %}
-              <a class="btn btn-primary" href="?page=1">&laquo; first</a>
-              <a class="btn btn-primary" href="?page={{ page_obj.previous_page_number }}">previous</a>
-          {% endif %}
-  
-          <span class="current">
-              <button class="btn btn-dark"> Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</button>
-          </span>
-  
-          {% if page_obj.has_next %}
-              <a class="btn btn-primary" href="?page={{ page_obj.next_page_number }}">next</a>
-              <a class="btn btn-primary" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-          {% endif %}
-      </span>
-  </div>
 {% endblock body %}
 
