--- a/templates/create_job.html
+++ b/templates/create_job.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 
-<a href="{%url 'showjobs'%}">Back</a> 
+<b><a href="{%url 'index' %}" style="cursor: pointer;text-decoration: none">&lt;&lt;Back</a></b>
 
     {%if update %}
     <h4>Update Job</h4>
