--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -2,6 +2,7 @@
 {% block Title %}Jobs{% endblock Title %}
 {% block body %}
 {% load crispy_forms_tags %}
+<b><a href="{%url 'index'%}" style="cursor: pointer;text-decoration: none">&lt;&lt;Back</a></b>
   <div class="row">
 
     <div class="col-md-2 col-sm-12">
